@@ -1,0 +1,5 @@
+<?php
+
+	system_message(elgg_echo("subsite_manager:action:bulk_action:dummy"));
+	
+	forward(REFERER);
