@@ -1,0 +1,5 @@
+<?php ?>
+
+#subsite-manager-newest-users-bulk-action .elgg-module-inline .elgg-head a {
+	color: white;
+}
